src/test/ui/issues/issue-38412.stderr
error[E0532]: expected tuple struct or tuple variant, found struct `Box`
  --> $DIR/issue-38412.rs:2:9
   |
LL |     let Box(a) = loop { };
   |         ^^^ not a tuple struct or tuple variant

error: aborting due to previous error

For more information about this error, try `rustc --explain E0532`.
